--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             }
 
             .menu-container {
-                padding: 10px;
+                padding: 10px 10px 40px;
             }
 
             .menu-item {
