--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -5,12 +7,6 @@
 
     <!-- Google Fonts の読み込み -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
-
-    <!-- SNSシェア用画像設定 -->
-    <meta property="og:image" content="img/logo.webp">
-    <meta name="twitter:image" content="img/logo.webp">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
 
     <style>
         /* 基本スタイル */
@@ -145,3 +141,63 @@
         }
     </style>
 </head>
+<body>
+
+    <header>
+        <h1><img src="img/logo.webp" alt="ロゴ"></h1>
+        <h2>FOOD MENU</h2>
+    </header>
+
+    <div class="menu-container">
+        <div class="menu-item">
+            <img src="img/recipe_20240614001.webp" alt="カレーライス">
+            <div class="text">
+                <h3>カレーライス</h3>
+                <p>スパイシーなカレーとライスの定番メニュー。</p>
+                <div class="price">¥800</div>
+            </div>
+        </div>
+
+        <div class="menu-item">
+            <img src="img/recipe_20240614001.webp" alt="ラーメン">
+            <div class="text">
+                <h3>ラーメン</h3>
+                <p>豚骨ベースのこってりラーメン。</p>
+                <div class="price">¥750</div>
+            </div>
+        </div>
+
+        <div class="menu-item">
+            <img src="img/recipe_20240614001.webp" alt="天ぷら定食">
+            <div class="text">
+                <h3>天ぷら定食</h3>
+                <p>サクサクの天ぷらとご飯のセット。</p>
+                <div class="price">¥1000</div>
+            </div>
+        </div>
+
+        <div class="menu-item">
+            <img src="img/recipe_20240614001.webp" alt="おにぎりセット">
+            <div class="text">
+                <h3>おにぎりセット</h3>
+                <p>シンプルでおいしいおにぎりのセット。</p>
+                <div class="price">¥500</div>
+            </div>
+        </div>
+
+        <div class="menu-item">
+            <img src="img/recipe_20240614001.webp" alt="寿司盛り合わせ">
+            <div class="text">
+                <h3>寿司盛り合わせ</h3>
+                <p>新鮮な魚を使った寿司の盛り合わせ。</p>
+                <div class="price">¥1200</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="footer">
+        ご注文はメニューをスタッフにお伝えください。
+    </div>
+
+</body>
+</html>
