--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         h2 {
             font-size: 16px;
-            padding-bottom: 20px;
+            padding-bottom: 0;
             font-weight: bold;
         }
 
@@ -146,51 +146,61 @@
     <header>
         <h1><img src="img/logo.webp" alt="ロゴ"></h1>
         <h2>FOOD MENU</h2>
+        <span>（写真はイメージです）</span>
     </header>
 
     <div class="menu-container">
         <div class="menu-item">
-            <img src="img/recipe_20240614001.webp" alt="カレーライス">
+            <img src="img/appetizer_03.jpg" alt="フライドポテト">
             <div class="text">
-                <h3>カレーライス</h3>
-                <p>スパイシーなカレーとライスの定番メニュー。</p>
+                <h3>フライドポテト</h3>
+                <p>定番あつあつフライドポテト！</p>
+                <div class="price">¥700</div>
+            </div>
+        </div>
+
+        <div class="menu-item">
+            <img src="img/91.avif" alt="チキンドラムフライ">
+            <div class="text">
+                <h3>チキンドラムフライ</h3>
+                <p>チキンドラムをカリッと揚げた唐揚げです。</p>
                 <div class="price">¥800</div>
             </div>
         </div>
 
         <div class="menu-item">
-            <img src="img/recipe_20240614001.webp" alt="ラーメン">
+            <img src="img/016357-0-0_0.jpg" alt="ポークジャーキー">
             <div class="text">
-                <h3>ラーメン</h3>
-                <p>豚骨ベースのこってりラーメン。</p>
-                <div class="price">¥750</div>
-            </div>
-        </div>
-
-        <div class="menu-item">
-            <img src="img/recipe_20240614001.webp" alt="天ぷら定食">
-            <div class="text">
-                <h3>天ぷら定食</h3>
-                <p>サクサクの天ぷらとご飯のセット。</p>
-                <div class="price">¥1000</div>
-            </div>
-        </div>
-
-        <div class="menu-item">
-            <img src="img/recipe_20240614001.webp" alt="おにぎりセット">
-            <div class="text">
-                <h3>おにぎりセット</h3>
-                <p>シンプルでおいしいおにぎりのセット。</p>
+                <h3>自家製ポークジャーキー（2つ）</h3>
+                <p>BARCODEオリジナル手作りジャーキーです。</p>
                 <div class="price">¥500</div>
             </div>
         </div>
 
         <div class="menu-item">
-            <img src="img/recipe_20240614001.webp" alt="寿司盛り合わせ">
+            <img src="img/tbm_20200710182512.jpg" alt="チーズドッグ">
             <div class="text">
-                <h3>寿司盛り合わせ</h3>
-                <p>新鮮な魚を使った寿司の盛り合わせ。</p>
-                <div class="price">¥1200</div>
+                <h3>チーズドッグ</h3>
+                <p>カリカリとろとろチーズドッグ</p>
+                <div class="price">¥600</div>
+            </div>
+        </div>
+
+        <div class="menu-item">
+            <img src="img/istockphoto-680411210-612x612.jpg" alt="生ハム">
+            <div class="text">
+                <h3>生ハム</h3>
+                <p>お酒のあてにピッタリ絶品生ハム</p>
+                <div class="price">¥1000</div>
+            </div>
+        </div>
+
+        <div class="menu-item">
+            <img src="img/logo.webp" alt="">
+            <div class="text">
+                <h3>その他</h3>
+                <p>その他のメニューはスタッフにお尋ねください！</p>
+                <div class="price">ASK</div>
             </div>
         </div>
     </div>
