--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         </div>
 
         <div class="menu-item">
-            <img src="img/logo.webp" alt="">
+            <img src="img/3_01.jpg" alt="">
             <div class="text">
                 <h3>その他</h3>
                 <p>その他のメニューはスタッフにお尋ねください！</p>
